Test/dafny0/TypeInstantiations.dfy.expect
TypeInstantiations.dfy(33,7): Error: an opaque type declaration (B) in a refining module cannot replace a more specific type declaration in the refinement base
TypeInstantiations.dfy(36,13): Error: a type declaration that requires equality support cannot be replaced by a codatatype
TypeInstantiations.dfy(40,7): Error: type 'G' is declared with a different number of type parameters (1 instead of 0) than the corresponding type in the module it refines
TypeInstantiations.dfy(41,7): Error: type 'H' is declared with a different number of type parameters (1 instead of 2) than the corresponding type in the module it refines
TypeInstantiations.dfy(42,7): Error: type 'J' is declared with a different number of type parameters (0 instead of 1) than the corresponding type in the module it refines
TypeInstantiations.dfy(44,10): Error: type parameter 'W' is not allowed to change the requirement of supporting equality
TypeInstantiations.dfy(45,10): Error: type parameter 'W' is not allowed to change the requirement of supporting equality
TypeInstantiations.dfy(46,9): Error: type parameter 'V' is not allowed to change the requirement of supporting equality
TypeInstantiations.dfy(49,9): Error: type parameter 'U'' is not allowed to change the requirement of supporting equality
TypeInstantiations.dfy(51,8): Error: type 'R' is declared with a different number of type parameters (0 instead of 1) than the corresponding type in the module it refines
TypeInstantiations.dfy(53,8): Error: type 'T' is declared with a different number of type parameters (1 instead of 0) than the corresponding type in the module it refines
TypeInstantiations.dfy(55,7): Error: type 'TP0' is declared with a different number of type parameters (1 instead of 0) than the corresponding type in the module it refines
TypeInstantiations.dfy(56,7): Error: type 'TP1' is declared with a different number of type parameters (0 instead of 1) than the corresponding type in the module it refines
TypeInstantiations.dfy(34,11): Error: type 'C', which does not support equality, is used to refine an opaque type with equality support
TypeInstantiations.dfy(35,7): Error: type 'D', which does not support equality, is used to refine an opaque type with equality support
TypeInstantiations.dfy(48,7): Error: type 'N', which does not support equality, is used to refine an opaque type with equality support
TypeInstantiations.dfy(69,29): Error: RHS (of type List<int>) not assignable to LHS (of type MyList.List<real>) (invariant type parameter would require real = int)
TypeInstantiations.dfy(81,8): Error: the type of this variable is underspecified
TypeInstantiations.dfy(82,8): Error: the type of this variable is underspecified
TypeInstantiations.dfy(96,22): Error: RHS (of type List<int>) not assignable to LHS (of type List<real>) (invariant type parameter would require real = int)
TypeInstantiations.dfy(108,8): Error: the type of this variable is underspecified
TypeInstantiations.dfy(109,8): Error: the type of this variable is underspecified
TypeInstantiations.dfy(127,27): Error: RHS (of type int) not assignable to LHS (of type C.Classic<real>)
TypeInstantiations.dfy(137,8): Error: the type of this variable is underspecified
TypeInstantiations.dfy(137,23): Error: type variable 'A' in the function call to 'F' could not be determined
TypeInstantiations.dfy(137,24): Error: the type of this expression is underspecified
26 resolution/type errors detected in TypeInstantiations.dfy
